Bug 1880018 - Implement RecordedExtractSubrect to forward ExtractSubract calls for SourceSurfaceRecording. r=aosmond

ExtractSubrect calls were not getting forwarded on SourceSurfaceRecording, causing us to do unnecessary readbacks
when hitting the CopySurface fallback path. SourceSurfaceWebgl actually implements ExtractSubrect already, but it
was never being used since the switch over to the DrawTargetRecording infrastructure.

Differential Revision: https://phabricator.services.mozilla.com/D201701